Update gradle verion to 9.2.0 with wrapper with propper build scripts.